--- a/webApi/backend/.env
+++ b/webApi/backend/.env
@@ -1,3 +1,7 @@
+HTTPS=true
+SSL_CRT_FILE=./server.cert
+SSL_KEY_FILE=./private.key
+
 PORT = 5000
 MONGODB_CLOUD = 'mongodb://127.0.0.1:27017/student_batch'
 MONGODB_LOCAL = 'mongodb://localhost:27017/kidscloset'
