--- a/webApi/backend/.env
+++ b/webApi/backend/.env
@@ -3,8 +3,8 @@ SSL_CRT_FILE=./server.cert
 SSL_KEY_FILE=./private.key
 
 PORT = 5000
-MONGODB_CLOUD = 'mongodb://127.0.0.1:27017/student_batch'
-MONGODB_LOCAL = 'mongodb://localhost:27017/kidscloset'
+MONGODB_CLOUD = 'mongodb://127.0.0.1:27017/SanoSansar'
+MONGODB_LOCAL = 'mongodb://localhost:27017/SanoSansar'
 
 // j lekheni bhayo ->>>JWT_SECRET=asdfghjkiuytrewscvb
 JWT_SECRET=SHREZSECRETKEY
