--- a/react/kidscloset1/package.json
+++ b/react/kidscloset1/package.json
@@ -34,7 +34,7 @@
     "winston-mongodb": "^6.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&set SSL_CRT_FILE=./root.crt&&set SSL_KEY_FILE=./root.key&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
